<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@color/colorFondoCelda"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/foto_pet"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:maxWidth="90dp"
            android:maxHeight="90dp"
            app:srcCompat="@drawable/dog_1"
            android:contentDescription="@string/mascota" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre_pet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster_regular"
                android:text="@string/nombre_mascota"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/status_pet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/status"
                android:textAlignment="center"
                android:layout_marginBottom="4dp"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iconito_pet"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/paw" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

</LinearLayout>