<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".View.DetallePetActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="center"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datos" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem_cuponera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donde_estamos" />
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0"
        app:layout_anchorGravity="left|top" />


</FrameLayout>